# hpc_project_nearest_neighbours

./: .clang-format  .gitignore  CMakeLists.txt  README.md  preprocess.ipynb  pyproject.toml
cpp/: Makefile  hnsw  hnsw.cpp  hnsw_cuda  hnsw_cuda.cu  kd_tree.cpp  kd_tree_cuda.cu  lsh  lsh.cpp  lsh_cuda  lsh_cuda.cu
data/: scaling_L16_K12.csv  scaling_L32_K12.csv  scaling_modes_L32_K12.csv
results/: cuda_compare_L32_K12.csv  hnsw_cuda_compare_M16_ef50.csv  hnsw_ef_sweep_M16_P8.csv  hnsw_lsh_1M_100d_summary.csv  hnsw_lsh_small_N20000_summary.csv  hnsw_scaling_M16_ef50.csv  kdtree_build_D100_N1000000.csv  kdtree_build_D10_N1000000.csv  kdtree_build_D25_N400000.csv  kdtree_build_D50_N20000.csv  kdtree_cuda_D50_N20000.csv  kdtree_cuda_comparison_summary.csv  kdtree_lsh_hnsw_10d_summary.csv  kdtree_lsh_hnsw_summary.csv  kdtree_query_D100_N1000000.csv  kdtree_query_D10_N1000000.csv  kdtree_query_D25_N400000.csv  kdtree_query_D50_N20000.csv  scaling_modes_L32_K12.csv  scaling_modes_new_L32_K12.csv
scripts/: ablate_cuda_queries.sh  ablate_features.sh  ablate_neighbors.sh  ablate_queries.sh  bench.sh  bench_cuda.sh  bench_hnsw.sh  bench_hnsw_cuda.sh  bench_hnsw_ef.sh  bench_kdtree.sh  bench_kdtree_cuda.sh  create_presentation_plots.py  download_glove.sh  export_for_cpp.py  plot_cuda.py  plot_hnsw_cuda.py  plot_hnsw_ef.py  plot_hnsw_scaling.py  (+10 more)
source/: CMakeLists.txt
source/benchmark/: arg_helper.hh  benchmark.hh  dataloader.hh
source/exhaustive_knn/: exhaustive_knn.hh
source/generic/: functions.hh  index.hh  types.hh
source/kd_tree/: kd_tree.cc  kd_tree.hh  policy.hh
(+3 files in other folders)
